# excel_to_ical_converter

./: README.md  pyproject.toml
excel_to_ical_converter/: run_conversion.py
tests/: test_excel_to_ical_converter.py
