[tool.poetry]
name = "excel_to_ical_converter"
version = "0.1.0"
description = ""
authors = ["Timo Schadt <timo_schadt@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
